--- a/index.html
+++ b/index.html
@@ -5,126 +5,188 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Song Word Trainer</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f7fa;
-      margin: 0;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    h2 {
-      color: #2c3e50;
-      margin-bottom: 1rem;
-    }
-    textarea {
-      width: 100%;
-      max-width: 600px;
-      height: 150px;
-      padding: 1rem;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-      margin-bottom: 1rem;
-      resize: vertical;
-    }
-    #wordCounter {
-      margin-top: 1rem;
-      font-size: 18px;
-      color: #555;
-    }
-    input[type="text"] {
-      width: 100%;
-      max-width: 600px;
-      padding: 0.5rem;
-      font-size: 16px;
-      margin: 1rem 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    button {
-      padding: 0.6rem 1.2rem;
-      font-size: 16px;
-      border: none;
-      border-radius: 6px;
-      background-color: #3498db;
-      color: white;
-      margin: 0.3rem;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    button:hover {
-      background-color: #2980b9;
-    }
-    #output {
-      margin-top: 1rem;
-      max-width: 700px;
-      padding: 1rem;
-      background: #ffffff;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      min-height: 50px;
-      min-width: 300px;
-      justify-content: flex-start;
-    }
-    .word {
-      padding: 6px 10px;
-      background: #ecf0f1;
-      border-radius: 5px;
-      font-size: 16px;
-      opacity: 1;
-      transition: opacity 0.4s ease;
-    }
-    .correct {
-      background-color: #d4edda;
-      color: #155724;
-    }
-    .saved {
-      border: 2px dashed #f39c12;
-      background-color: #fff9e6;
-      color: #b57300;
-    }
-    h3 {
-      margin-top: 2rem;
-      color: #2c3e50;
-    }
-    ul#savedWords {
-      list-style: none;
-      padding: 0;
-      max-width: 600px;
-      margin-top: 0.5rem;
-    }
-   ul#savedWords {
+   body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: linear-gradient(135deg, #6b8dd6 0%, #a6c1ee 100%);
+  margin: 0;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  color: #2c3e50;
+}
+
+h2 {
+  margin-bottom: 1rem;
+  font-weight: 700;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
+}
+
+textarea {
+  width: 100%;
+  max-width: 600px;
+  height: 150px;
+  padding: 1rem;
+  font-size: 16px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: inset 2px 2px 5px rgba(0,0,0,0.1);
+  margin-bottom: 1.2rem;
+  resize: vertical;
+  transition: box-shadow 0.3s ease;
+}
+
+textarea:focus {
+  outline: none;
+  box-shadow: inset 2px 2px 8px #2980b9;
+}
+
+#wordCounter {
+  margin-top: 1rem;
+  font-size: 18px;
+  color: #34495e;
+  font-weight: 600;
+}
+
+input[type="text"] {
+  width: 100%;
+  max-width: 600px;
+  padding: 0.75rem 1rem;
+  font-size: 16px;
+  margin: 1.5rem 0;
+  border: none;
+  border-radius: 10px;
+  box-shadow: inset 2px 2px 6px rgba(0,0,0,0.1);
+  transition: box-shadow 0.3s ease;
+}
+
+input[type="text"]:focus {
+  outline: none;
+  box-shadow: inset 2px 2px 10px #3498db;
+}
+
+button {
+  padding: 0.6rem 1.5rem;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  background-color: #2980b9;
+  color: white;
+  margin: 0.3rem;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(41, 128, 185, 0.4);
+  transition: background-color 0.3s, box-shadow 0.3s;
+  font-weight: 600;
+  user-select: none;
+}
+
+button:hover {
+  background-color: #1c5d8b;
+  box-shadow: 0 6px 14px rgba(28, 93, 139, 0.6);
+}
+
+#output {
+  margin-top: 1rem;
+  max-width: 700px;
+  padding: 1.2rem;
+  background: #ffffffcc;
+  border-radius: 12px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  min-height: 60px;
+  min-width: 300px;
+  justify-content: flex-start;
+  transition: background-color 0.3s ease;
+}
+
+.word {
+  padding: 8px 14px;
+  background: #ecf0f1;
+  border-radius: 8px;
+  font-size: 16px;
+  opacity: 1;
+  transition: opacity 0.4s ease, background-color 0.3s;
+  cursor: default;
+  user-select: none;
+  box-shadow: 1px 1px 4px rgba(0,0,0,0.1);
+}
+
+.correct {
+  background-color: #d4edda;
+  color: #155724;
+  box-shadow: 1px 1px 8px #27ae6011;
+}
+
+.saved {
+  border: 2px dashed #f39c12;
+  background-color: #fff9e6;
+  color: #b57300;
+  box-shadow: 1px 1px 6px #f39c1211;
+}
+
+h3 {
+  margin-top: 2.5rem;
+  color: #2c3e50;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+}
+
+ul#savedWords {
   list-style: none;
-  padding: 0;
+  padding: 10px 15px;
   max-width: 600px;
   margin-top: 0.5rem;
-  display: flex;               /* Flexbox para fila */
-  flex-direction: row;         /* Dirección horizontal */
-  gap: 10px;                   /* Espacio entre palabras */
-  overflow-x: auto;            /* Scroll horizontal si hay muchas palabras */
-  white-space: nowrap;         /* Evita salto de línea */
-  border: 1px solid #ccc;      /* Opcional: borde para delimitar área */
-  border-radius: 6px;
-  background: #fdf6e3;
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  overflow-x: auto;
+  white-space: nowrap;
+  border: 1.5px solid #ccc;
+  border-radius: 10px;
+  background: #fff9e6;
+  box-shadow: inset 1px 1px 5px rgba(243, 156, 18, 0.1);
+  scrollbar-width: thin;
 }
 
 ul#savedWords li {
   background: #fdf6e3;
-  border: 1px solid #f0e2b6;
-  padding: 8px 12px;
-  border-radius: 6px;
+  border: 1.5px solid #f0e2b6;
+  padding: 8px 14px;
+  border-radius: 8px;
   color: #7f6000;
-  display: inline-flex;        /* Para que texto y botón estén alineados horizontalmente */
+  display: inline-flex;
   align-items: center;
-  white-space: nowrap;         /* Texto no se parte */
-  margin-bottom: 0;            /* Quita margen inferior porque no será vertical */
+  white-space: nowrap;
+  cursor: default;
+  user-select: none;
+  transition: background-color 0.3s ease;
+  box-shadow: 1px 1px 5px rgba(0,0,0,0.05);
 }
+
+ul#savedWords li:hover {
+  background-color: #f3e8b1;
+}
+
+ul#savedWords li button {
+  margin-left: 8px;
+  padding: 4px 8px;
+  font-size: 14px;
+  border-radius: 6px;
+  border: none;
+  background-color: #2980b9;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  user-select: none;
+}
+
+ul#savedWords li button:hover {
+  background-color: #1c5d8b;
+}
+
 
   </style>
 </head>
